--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -41088,7 +41088,7 @@ tr.hide {
     margin-right: 48px !important;
   }
 }
-.become-a-host__footer-progress {
+.progress-bar-bottom-alt {
   -webkit-box-flex: 1 !important;
   -ms-flex-positive: 1 !important;
   overflow-x: hidden !important;
@@ -41098,7 +41098,7 @@ tr.hide {
   -webkit-flex-grow: 1 !important;
   flex-grow: 1 !important;
 }
-.become-a-host__footer-progress-bar {
+.progress-bar-bottom-alt__bar {
   position: relative !important;
   width: 100% !important;
   left: -100% !important;
