--- a/src/css/components/cards/card-portrait.css
+++ b/src/css/components/cards/card-portrait.css
@@ -57,7 +57,7 @@
   outline: 0;
 }
 .dir.card-portrait__link {
-  border-radius: var(--i-g-gvoq);
+  border-radius: var(--border-radius-lg);
 }
 .dir-ltr.card-portrait__link {
   left: 0;
@@ -110,7 +110,7 @@
   outline: 0;
 }
 .dir.card-portrait__link {
-  border-radius: var(--i-g-gvoq);
+  border-radius: var(--border-radius-lg);
 }
 .dir-ltr.card-portrait__link {
   left: 0;
