--- a/src/css/components/header-filter.css
+++ b/src/css/components/header-filter.css
@@ -70,7 +70,7 @@
 .dir.header-filter[class][class] {
   cursor: pointer;
   text-align: center;
-  border-radius: var(--go-h-jh-l);
+  border-radius: var(--border-radius);
   background-color: unset;
   border: unset;
   padding: 4px 0 14px;
