--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1986,7 +1986,7 @@
 }
 .dir.c1ixqffw[class][class] {
   background: var(--f-mkcy-f);
-  border-radius: var(--i-g-gvoq);
+  border-radius: var(--border-radius-lg);
   box-shadow: 0 2px 16px rgba(0,0,0,.12);
   margin-top: 34px;
   padding: 8px 0
