--- a/src/css/root.css
+++ b/src/css/root.css
@@ -1,10 +1,10 @@
 /* Root */
 :root {
-  --h-l-f-om-o: 4px;
-  --go-h-jh-l: 8px;
-  --i-g-gvoq: 12px;
-  --g-ki-r-rq: 16px;
-  --j-mdfu-h: 20px;
+  --border-radius-sm: 4px;
+  --border-radius: 8px;
+  --border-radius-lg: 12px;
+  --border-radius-xl: 16px;
+  --border-radius-2xl: 20px;
   --jx-b-v-zt: 0 8px 28px rgba(0, 0, 0, 0.28);
   --g-r-n-ycy: 1px solid rgba(0, 0, 0, 0.04);
   --ih-jiz-p: 0 6px 20px rgba(0, 0, 0, 0.2);
@@ -110,11 +110,11 @@
   --mq-yk-l: 0.04em;
   --swiper-theme-color: #007aff;
   --swiper-navigation-size: 44px;
-  --h-l-f-om-o: 4px;
-  --go-h-jh-l: 8px;
-  --i-g-gvoq: 12px;
-  --g-ki-r-rq: 16px;
-  --j-mdfu-h: 20px;
+  --border-radius-sm: 4px;
+  --border-radius: 8px;
+  --border-radius-lg: 12px;
+  --border-radius-xl: 16px;
+  --border-radius-2xl: 20px;
   --jx-b-v-zt: 0 8px 28px rgba(0, 0, 0, 0.28);
   --g-r-n-ycy: 1px solid rgba(0, 0, 0, 0.04);
   --ih-jiz-p: 0 6px 20px rgba(0, 0, 0, 0.2);
@@ -225,11 +225,11 @@
   --jp-carousel-border-color: #3a3a3a;
   --wp--preset--font-size--normal: 16px;
   --wp--preset--font-size--huge: 42px;
-  --h-l-f-om-o: 4px;
-  --go-h-jh-l: 8px;
-  --i-g-gvoq: 12px;
-  --g-ki-r-rq: 16px;
-  --j-mdfu-h: 20px;
+  --border-radius-sm: 4px;
+  --border-radius: 8px;
+  --border-radius-lg: 12px;
+  --border-radius-xl: 16px;
+  --border-radius-2xl: 20px;
   --jx-b-v-zt: 0 8px 28px rgba(0, 0, 0, 0.28);
   --g-r-n-ycy: 1px solid rgba(0, 0, 0, 0.04);
   --ih-jiz-p: 0 6px 20px rgba(0, 0, 0, 0.2);
@@ -343,11 +343,11 @@
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
   :root {
-    --h-l-f-om-o: 4px;
-    --go-h-jh-l: 8px;
-    --i-g-gvoq: 12px;
-    --g-ki-r-rq: 16px;
-    --j-mdfu-h: 20px;
+    --border-radius-sm: 4px;
+    --border-radius: 8px;
+    --border-radius-lg: 12px;
+    --border-radius-xl: 16px;
+    --border-radius-2xl: 20px;
     --jx-b-v-zt: 0 8px 28px rgba(0, 0, 0, 0.28);
     --g-r-n-ycy: 1px solid rgba(0, 0, 0, 0.04);
     --ih-jiz-p: 0 6px 20px rgba(0, 0, 0, 0.2);
